# samplingEngine

./: .gitignore  .travis.yml  CONTRIBUTING  README.rst  TESTING.rst  TODO  docker-compose.yml  requirements.txt
.github/workflows/: pull_request.yml
docker/tools/: build_in_docker.sh
docker/trusty/clang/3-5/: Dockerfile
docker/trusty/clang/3-6/: Dockerfile
docker/trusty/clang/3-7/: Dockerfile
docker/trusty/clang/3-8/: Dockerfile
docker/trusty/gcc/4-8/: Dockerfile
docker/trusty/gcc/4-9/: Dockerfile
docker/trusty/gcc/5/: Dockerfile
docker/trusty/gcc/6/: Dockerfile
docker/xenial/clang/3-8/: Dockerfile
docker/xenial/gcc/5/: Dockerfile
docker/xenial/gcc/6/: Dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
include/filters/: averaging.h
include/interfaces/: abstractFilter.h
include/samplingEngineInternal/filters/: averaging.h
include/samplingEngineInternal/geometricEngine/: channelOffsets.h  engine.h
include/samplingEngineInternal/interfaces/: abstractFilter.h
include/samplingEngineInternal/logging/: log.h
include/samplingEngineTesting/testing/log/: testLogger.h
public/samplingEngine/: channel.h  configuration.h  core.h  distance_record.h  engine.h  error_codes.h  log.h  record_queues.h  time_channels.h  time_record.h
public/samplingEngine/channels/: channel.h  distance_channels.h  time_channels.h
public/samplingEngine/records/: distance_record.h  record_type.h  status_record.h  time_record.h
public/samplingengine/: channel.h  configuration.h  distance_channels.h  distance_record.h  engine.h  error_codes.h  record_type.h  status_record.h  time_channels.h  time_record.h
src/: CMakeLists.txt  Doxyfile  Makefile  abstractFilter.cpp  geometricEngine.cpp  samplingEngine.cpp  samplingengine.c  samplingengine.cpp
src/base/: log.cpp
src/engines/: channelOffsets.cpp  coreSamplingEngine.cpp  geometricEngine.cpp  samplingEngine.cpp
src/filters/: Makefile  TODO  abstractFilter.cpp  averaging.c
src/measurements/: TODO
src/tests/: CMakeLists.txt  README.rst
src/tests/common/: CMakeLists.txt  test_channels.cpp  test_common.cpp  test_log.cpp
src/tests/engines/: CMakeLists.txt
src/tests/engines/core/: CMakeLists.txt  fakeEngine.h  test_coreEngine_basic.cpp  test_main.cpp
src/tests/engines/geometryEngine/: CMakeLists.txt  test_geometryEngine_basic.cpp
src/tests/engines/sampleEngine/: CMakeLists.txt  fakeEngine.h  test_basic.cpp  test_sampleEngine_basic.cpp
src/tests/filters/: CMakeLists.txt  test_placeholder.cpp
