CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(SamplingEngine C CXX)

SET(PUBLIC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../public)
SET(INTERNAL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include)

INCLUDE_DIRECTORIES(${INTERNAL_HEADERS} ${PUBLIC_HEADERS})
IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
ENDIF()

FILE(GLOB_RECURSE SE_SOURCE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

ADD_LIBRARY(SamplingEngine STATIC ${SE_SOURCE})

